--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -52,7 +52,7 @@
                     <span class="fas-3 bi_house" style="color: aliceblue;">아쿠팜</span>
                 </a>
                 <div class="nav_list">
-                    <a href="#" class="nav_link active">
+                    <a href="#" onclick="dashboardOpen()" class="nav_link active">
                         <i class='bx bx-grid-alt nav_icon'></i>
                         <span class="nav_name">대시보드</span>
                     </a>
@@ -64,7 +64,7 @@
                     <a href="#" class="nav_link" id="stumanag">
                         <i class='bx bx-user nav_icon'></i> <span class="nav_name">학생관리</span>
                     </a>
-                    <a href="#" class="nav_link" id="settings">
+                    <a href="/admin" class="nav_link" id="settings">
                         <i class='bx bx-cog nav_icon'></i>
                         <span class="nav_name">설정</span>
                     </a>
@@ -72,7 +72,7 @@
                 </div>
             </div>
 
-            <a href="#" onclick="javascript:logout()" class="nav_link"> <i class='bx bx-log-out nav_icon'></i>
+            <a href="#" onclick="logout()" class="nav_link"> <i class='bx bx-log-out nav_icon'></i>
                 <span class="nav_name">SignOut</span>
             </a>
         </nav>
@@ -97,5 +97,10 @@
         <script src="https://kit.fontawesome.com/57c8b4e229.js"></script> -->
     <script src="js/sidebar.js"></script>
     <script src="js/memberAuth.js"></script>
+    <script>
+        function dashboardOpen() { 
+            window.location = `/dashboard${decodeURI(location.search.substr(location.search))}`;
+        }
+    </script>
 </body>
 </html>
