--- a/views/admin.html
+++ b/views/admin.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.3/themes/base/jquery-ui.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.10.0/css/bootstrap-datepicker.min.css"/> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.10.0/css/bootstrap-datepicker.min.css"/>
     <link rel="stylesheet" href="https://cdn.datatables.net/2.0.8/css/dataTables.bootstrap5.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style/sidebar.css">
@@ -125,7 +125,7 @@
 
                 <div class="row" style="padding-top: 2rem;">
                     <div class="col-12">
-                        <div class="card" id="card_search">
+                        <div class="card" id="card_search" style="display: none;">
                             <div class="card-header">
                                 <span class="card-title">학생 검색 결과</span>
                             </div>
@@ -178,38 +178,32 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.10.0/js/bootstrap-datepicker.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.10.0/js/bootstrap-datepicker.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.10.0/locales/bootstrap-datepicker.ko.min.js"></script> -->
     <script src="https://cdn.datatables.net/2.0.8/js/dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/2.0.8/js/dataTables.bootstrap5.min.js"></script>
     <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
     <script src="js/sidebar.js"></script>
     <script src="js/memberAuth.js"></script>
     <script>
-        $(document).ready(function(){               
-            $.datepicker.setDefaults({
-            closeText: "닫기",
-            currentText: "오늘",
-            prevText: '이전 달',
-            nextText: '다음 달',
-            monthNames: ['1월', '2월', '3월', '4월', '5월', '6월', '7월', '8월', '9월', '10월', '11월', '12월'],
-            monthNamesShort: ['1월', '2월', '3월', '4월', '5월', '6월', '7월', '8월', '9월', '10월', '11월', '12월'],
-            dayNames: ['일', '월', '화', '수', '목', '금', '토'],
-            dayNamesShort: ['일', '월', '화', '수', '목', '금', '토'],
-            dayNamesMin: ['일', '월', '화', '수', '목', '금', '토'],
-            weekHeader: "주",
-            yearSuffix: '년'
-            });    
-            $( function() { $( "#stdate" ).datepicker({ dateFormat : 'yy-mm-dd' }); });
-            $( function() { $( "#eddate" ).datepicker({ dateFormat : 'yy-mm-dd' }); });
+        $( function() { 
+            $("#stdate").datepicker({ 
+                format : 'yyyy-mm-dd',
+                autoclose: true,
+                language: 'ko'
+            }); 
+
+            $("#eddate").datepicker({ 
+                format : 'yyyy-mm-dd',
+                autoclose: true,
+                calendarWeeks: false,
+            }); 
         });
+
         function search() {
-
             $("#card_search").css('display', '');
-            $("#table_body").html("");
-            // $("#card_search").DataTable().clear();
-            // $("#card_search").DataTable().destroy();
-
             var datas = [];
+
             $.ajax({
                 url: "/searchTable",
                 method: "post",
