--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -45,7 +45,7 @@
         </nav>
     </header>
     <div class="l-navbar" id="nav-bar">
-        <nav class="nav">
+        <nav class="navsidebar">
             <div>
                 <a href="/" class="nav_logo" style="padding-left: 22px;">
                     <i ><img src="imgs/am_h20.png" width="24px;"></i>
