--- a/views/index.html
+++ b/views/index.html
@@ -45,7 +45,7 @@
         </nav>
     </header>
     <div class="l-navbar" id="nav-bar">
-        <nav class="nav">
+        <nav class="navsidebar">
             <div>
                 <a href="/" class="nav_logo" style="padding-left: 22px;">
                     <i ><img src="imgs/am_h20.png" width="24px;"></i>
@@ -67,6 +67,18 @@
                         <i class='bx bx-cog nav_icon'></i>
                         <span class="nav_name">설정</span>
                     </a>
+                    <!-- <a href="#" class="nav_link" id="settings" data-bs-toggle="collapse" data-bs-target="#pages" aria-expanded="false" aria-controls="pages">
+                        <i class='bx bx-cog nav_icon'></i>
+                        <span class="nav_name">설정</span>
+                    </a>
+                    <ul id="pages" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
+                        <a href="/admin" class="nav_link" id="stumanag">
+                            <i class='bx bx-user nav_icon'></i> <span class="nav_name">사용자관리</span>
+                        </a>
+                        <a href="#" class="nav_link" id="stumanag">
+                            <i class='bx bx-user nav_icon'></i> <span class="nav_name">가입승인</span>
+                        </a>
+                    </ul> -->
                 </div>
             </div>
 
