--- a/public/style/sidebar.css
+++ b/public/style/sidebar.css
@@ -76,7 +76,7 @@ a {
     z-index: var(--z-fixed)
 }
 
-.nav {
+.navsidebar {
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -122,7 +122,7 @@ a {
     font-size: 1.25rem
 }
 
-.show {
+.shownavbar {
     left: 0
 }
 
