--- a/views/admin.html
+++ b/views/admin.html
@@ -8,7 +8,8 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.3/themes/base/jquery-ui.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.10.0/css/bootstrap-datepicker.min.css"/>
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.10.0/css/bootstrap-datepicker.min.css"/> -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
     <link rel="stylesheet" href="https://cdn.datatables.net/2.0.8/css/dataTables.bootstrap5.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style/sidebar.css">
@@ -48,7 +49,7 @@
         </nav>
     </header>
     <div class="l-navbar" id="nav-bar">
-        <nav class="nav">
+        <nav class="navsidebar">
             <div>
                 <a href="/" class="nav_logo" style="padding-left: 22px;">
                     <i ><img src="imgs/am_h20.png" width="24px;"></i>
@@ -83,56 +84,95 @@
         <div class="wrapper" id="device_card">
             <!-- <div class="container-fluid"> -->
                 <!-- <h4>학생 관리</h4> -->
-                <div class="card">
-                    <div class="card-header"> 
-                        <span class="card-title">학생 검색</span>
-                    </div>
-                    <div class="card-body">
-                        <div class="row">
-                            <div style="padding-bottom: 0.5rem;" class="col-sm-6 col-lg-3">
-                                <div class="input-group flex-nowrap">
-                                    <span class="input-group-text">학교</span>
-                                    <input type="text" id="school" name="school" class="form-control" maxlength="45">
-                                    <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#schoolSerch">검색</button>
+            <!-- <div class="card"> -->
+                <ul class="nav nav-tabs" style="padding: 0 0.2rem 0 0.2rem; border-color: transparent;">
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link active" data-bs-toggle="tab" data-bs-target="#manager">사용자 관리</a>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link" data-bs-toggle="tab" data-bs-target="#submit" onclick="ap_table()">가입 승인</a>
+                    </li>
+                </ul>
+                <div class="tab-content">
+                    <div class="tab-pane fade show active" id="manager" role="tabpanel" aria-labelledby="manager-tab">
+                        <div class="card">
+                            <div class="card-header"> 
+                                <span class="card-title">학생 검색</span>
+                            </div>
+                            <div class="card-body">
+                                <div class="row">
+                                    <div style="padding-bottom: 0.5rem;" class="col-sm-6 col-lg-4">
+                                        <div class="input-group flex-nowrap">
+                                            <span class="input-group-text">학교</span>
+                                            <input type="text" id="school" name="school" class="form-control" maxlength="45">
+                                            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#schoolSerch" aria-controls="home" aria-selected="true">검색</button>
+                                        </div>
+                                    </div>
+                                    <div style="padding-bottom: 0.5rem;" class="col-sm-6 col-lg-3">
+                                        <div class="input-group flex-nowrap">
+                                            <select id="level" name="level" class="form-select form-select-sm" style="flex: 0.2 1 auto;">
+                                                <option value="">전체</option>
+                                                <option value="0">학생</option>
+                                                <option value="1">교사</option>
+                                            </select>
+                                            <span class="input-group-text">이름</span>
+                                            <input type="text" id="name" name="name" class="form-control" maxlength="45">
+                                        </div>
+                                    </div>
+                                    <div style="padding-bottom: 0.5rem;" class="col-sm-6 col-lg-4">
+                                        <div class="input-group flex-nowrap">
+                                            <span class="input-group-text">가입일</span>
+                                                <input type="text" name="stdate" id="stdate" class ="form-control" autocomplete="off">
+                                        </div>
+                                    </div>
+                                    <div class="d-grid col-sm-6 col-lg-1" style="padding-bottom: 0.5rem;">
+                                        <button id="upload_button" onclick="search()" class="btn btn-primary waves-effect waves-light" style="float:right; min-width: 58.75px;">검색</button>
+                                    </div>
                                 </div>
                             </div>
-                            <div style="padding-bottom: 0.5rem;" class="col-sm-6 col-lg-3">
-                                <div class="input-group flex-nowrap">
-                                    <select id="level" name="level" class="form-select form-select-sm" style="flex: 0.2 1 auto;">
-                                        <option value="">전체</option>
-                                        <option value="0">학생</option>
-                                        <option value="1">교사</option>
-                                    </select>
-                                    <span class="input-group-text">이름</span>
-                                    <input type="text" id="name" name="name" class="form-control" maxlength="45">
+                        </div>
+                        <div class="row" style="padding-top: 2rem;">
+                            <div class="col-12">
+                                <div class="card" id="card_search" style="display: none;">
+                                    <div class="card-header">
+                                        <span class="card-title">학생 검색 결과</span>
+                                    </div>
+                                    <!-- card-header end -->
+                                    <div class="card-body">
+                                        <div class="table-responsive" >
+                                            <table class="table table-hover" id="tables" style="white-space: nowrap; width: 100%;">
+                                                <thead>
+                                                    <tr>
+                                                        <th>아이디</th>
+                                                        <th>학교</th>
+                                                        <th>직급</th>
+                                                        <th>이름</th>
+                                                        <th>학년</th>
+                                                        <th>반</th>
+                                                        <th>번호</th>
+                                                        <th>가입날짜</th>
+                                                        <th>#</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody id="table_body">
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+                                    <!-- card-body end -->
                                 </div>
-                            </div>
-                            <div style="padding-bottom: 0.5rem;" class="col-sm-6 col-lg-5">
-                                <div class="input-group flex-nowrap">
-                                    <span class="input-group-text">가입일</span>
-                                        <input type="text" name="stdate" id="stdate" class ="form-control" autocomplete="off"> 
-                                        <lebel class="col-form-label" style="text-align: center;">&nbsp;~&nbsp;</lebel>
-                                        <input type="text" name="eddtae" id="eddate" class ="form-control" autocomplete="off">
-                                </div>
-                            </div>
-                            <div class="d-grid col-sm-6 col-lg-1" style="padding-bottom: 0.5rem;">
-                                <button id="upload_button" onclick="search()" class="btn btn-primary waves-effect waves-light" style="float:right; min-width: 58.75px;">검색</button>
                             </div>
                         </div>
                     </div>
-                </div>
-
-
-                <div class="row" style="padding-top: 2rem;">
-                    <div class="col-12">
-                        <div class="card" id="card_search" style="display: none;">
+                    <div class="tab-pane fade" id="submit" role="tabpanel" aria-labelledby="submit-tab">
+                        <div class="card">
                             <div class="card-header">
-                                <span class="card-title">학생 검색 결과</span>
+                                <span class="card-title">가입 요청 사용자</span>
                             </div>
                             <!-- card-header end -->
                             <div class="card-body">
                                 <div class="table-responsive" >
-                                    <table class="table table-hover" id="tables" style="white-space: nowrap; width: 100%;">
+                                    <table class="table table-hover" id="ap_tables" style="white-space: nowrap; width: 100%;">
                                         <thead>
                                             <tr>
                                                 <th>아이디</th>
@@ -146,7 +186,7 @@
                                                 <th>#</th>
                                             </tr>
                                         </thead>
-                                        <tbody id="table_body">
+                                        <tbody>
                                         </tbody>
                                     </table>
                                 </div>
@@ -178,26 +218,58 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.10.0/js/bootstrap-datepicker.min.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.10.0/locales/bootstrap-datepicker.ko.min.js"></script> -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
     <script src="https://cdn.datatables.net/2.0.8/js/dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/2.0.8/js/dataTables.bootstrap5.min.js"></script>
     <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
     <script src="js/sidebar.js"></script>
     <script src="js/memberAuth.js"></script>
     <script>
-        $( function() { 
-            $("#stdate").datepicker({ 
-                format : 'yyyy-mm-dd',
-                autoclose: true,
-                language: 'ko'
-            }); 
+        function ap_table() {
+            var datas = [];
+            $.ajax({
+                url: "/members_temp",
+                method: "post",
+                success: function(data) {
+                    $.each(data, (i, v) => {
+                        let level = '';
+                        if (v.level == 0) level = '학생'
+                        else if (v.level == 1) level = '교사'
+                        else if (v.level == 2) level = '관리자'
+                        datas.push([
+                            v.id,
+                            v.school,
+                            level,
+                            v.name,
+                            v.grade,
+                            v.class,
+                            v.number,
+                            dayjs(v.date).format("YYYY-MM-DD"),
+                            i
+                        ])
+                        if (data.length - 1 == i) {
+                            console.log(datas)
+                            new DataTable('#ap_tables', { scrollX: true, paging: true, destroy: true, data: datas });
+                        }
+                    })
+                }
+            })
+        }
 
-            $("#eddate").datepicker({ 
-                format : 'yyyy-mm-dd',
-                autoclose: true,
-                calendarWeeks: false,
+        $( function() { 
+            $("#stdate").daterangepicker({ 
+                autoUpdateInput: false,
+                locale: {
+                    cancelLabel: 'Clear'
+                }
             }); 
+            
+            $("#stdate").on('apply.daterangepicker', function(ev, picker) {
+                $(this).val(picker.startDate.format('YYYY-MM-DD') + ' - ' + picker.endDate.format('YYYY-MM-DD'));
+            });
+
+            $("#stdate").on('cancel.daterangepicker', function(ev, picker) { $(this).val(''); });
         });
 
         function search() {
@@ -211,8 +283,8 @@
                     school: $("#school").val(),
                     level: $("#level").val(),
                     name: $("#name").val(),
-                    start: $("#stdate").val(),
-                    end: $("#eddate").val(),
+                    start: $("#stdate").val().split(" - ")[0],
+                    end: $("#stdate").val().split(" - ")[1],
                 },
                 success:function(data) {
                     $.each(data, (i, v) => {
