--- a/public/style/style.css
+++ b/public/style/style.css
@@ -9,3 +9,8 @@
   center;font-weight: bold;
   font-size: 21px;
 }
+
+th.dt-head-center, td.dt-head-center,
+th.dt-body-center, td.dt-body-center { 
+  vertical-align: middle; 
+}
