--- a/views/index.html
+++ b/views/index.html
@@ -29,9 +29,6 @@
                 <li class="navbar-text" style="padding: 0.5rem;">
                     <span id="level"></span>
                 </li>
-                <!-- <li class="navbar-text usericon" style="color: black; padding: 0.5rem;">
-                    <span id="username" style="height: 28px;">홍길동</span>
-                </li> -->
                 <li class="navbar-text usericon" style="color: black; padding: 0.5rem;">
                     <a id="username" data-bs-toggle="dropdown" role="button" href="#" style="height: 28px; width: calc(var(--nav-width) + 156px);"></a>
                     <ul class="dropdown-menu" aria-labelledby="username" style="width: 2rem; min-width: 100px;">
@@ -91,17 +88,9 @@
     <div class="height-100 bg-light" style="padding: 1rem;">
         <h4>기기 선택</h4>
         <div class="wrapper" id="device_card">
-            <!-- <div class="card" >
-                <a href="#">
-                    <div class="card-header"><h3 id="divce_name"></h3></div>
-                    <div class="card-body">
-                        <span id="device_date"></span>
-                    </div>
-                </a>
-            </div> -->
         </div>
     </div>
-
+</div>
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -111,7 +100,7 @@
     <script src="js/sidebar.js"></script>
     <script src="js/memberAuth.js"></script>
     <script>
-        window.onload = function() {
+        $(document).ready(function() {
             $.ajax({
                 url: "/get_device",
                 method: "post",
@@ -132,7 +121,7 @@
                     })
                 }
             })
-        }
+        })
         
     </script>
 </body>
