--- a/views/members/change_pw.html
+++ b/views/members/change_pw.html
@@ -8,129 +8,67 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="/style/member.css">
-    <style>
-        .mb-3 {
-            margin: 0 0 1.2rem !important;
-        }
-        label {
-            margin-top: 5px;
-            padding-left: 0.5rem;
-        }
-        .login-page {
-            min-height: 870px;
-            min-width: 372px;
-        }
-    </style>
 </head>
 
 <body class="login-page">
 <div class="login-logo">
-    <b>비밀번호 찾기</b>
+    <b>비밀번호 변경</b>
 </div>
 <div class="login-box">
     <!-- /.login-logo -->
     <div class="card" style="box-shadow: none">
         <div class="card-body login-card-body">
-            <form action="/register" name="userRegister" method="post">
-
+            <form class="form" action="/register" name="userRegister" method="post">
                 <div class="mb-3">
                     <div class="input-group">
-                        <select id="level" name="level" class="form-select">
-                            <option value="" selected>선택하세요</option>
-                            <option value="0">학생</option>
-                            <option value="1">교사</option>
-                        </select>
-                    </div>
-                    <label id="lLevel" style="color: red;" hidden>선택하세요.</label>
-                </div>
-                <div class="mb-3">
-                    <div class="input-group">
-                        <input type="text" name="school" id="school" class="form-control" placeholder="학교명">
-                        <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#schoolSerch">검색</button>
-                    </div>
-                    <label id="lSchool" style="color: red;" hidden>학교명을 입력하세요.</label>
-                </div>
-                <div class="mb-3">
-                    <div class="input-group">
-                        <input type="text" name="name" id="uname" class="form-control" placeholder="이름">
+                        <input type="password" name="pw" id="upw" class="form-control" placeholder="비밀번호" title="영숫자 조합으로&#13;6에서 15자리까지만 입력가능합니다." 
+                        pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{6,15}$" required oninvalid="this.setCustomValidity('비밀번호를 입력하세요.')" oninput="this.setCustomValidity('')">
                         <div class="input-group-append">
                         </div>
                     </div>
-                    <label id="lUname" style="color: red;" hidden>이름을 입력하세요.</label>
                 </div>
                 <div class="mb-3">
                     <div class="input-group">
-                        <input type="text" name="grade" id="grade" class="form-control" placeholder="학년" pattern="[0-9]{1}" title="1에서 9까지 숫자만 입력가능합니다.">
+                        <input type="password" name="pw2" id="upw2" class="form-control" placeholder="비밀번호 확인" title="영숫자 조합으로&#13;6에서 15자리까지만 입력가능합니다." 
+                        pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{6,15}$" required oninvalid="this.setCustomValidity('비밀번호를 입력하세요.')" oninput="this.setCustomValidity('')">
                         <div class="input-group-append">
                         </div>
                     </div>
-                    <label id="lUgrade" style="color: red;" hidden>학년을 입력하세요.</label>
+                    <label id="lUpw" style="color: red;" hidden>비밀번호를 확인하세요.</label>
                 </div>
-                <div class="mb-3">
-                    <div class="input-group">
-                        <input type="text" name="class" id="class" class="form-control" placeholder="반" pattern="[0-9]{1,2}" title="1에서 99까지 숫자만 입력가능합니다.">
-                        <div class="input-group-append">
-                        </div>
-                    </div>
-                    <label id="lUclass" style="color: red;" hidden>반을 입력하세요.</label>
-                </div>
-                <div class="mb-3">
-                    <div class="input-group">
-                        <input type="text" name="number" id="number" class="form-control" placeholder="번호" pattern="[0-9]{1,2}" title="1에서 99까지 숫자만 입력가능합니다.">
-                        <div class="input-group-append">
-                        </div>
-                    </div>
-                    <label id="lUnumber" style="color: red;" hidden>번호을 입력하세요.</label>
-                </div>
-                <div class="mb-3">
-                    <div class="input-group">
-                        <input type="text" name="id" id="uid" class="form-control" placeholder="아이디" pattern=".{6,12}" title="6에서 12자리까지만 입력가능합니다.">
-                        <div class="input-group-append">
-                        </div>
-                    </div>
-                    <label id="lUid" style="color: red;" hidden>아이디를 입력하세요.</label>
-                </div>
-
-                <!-- /.col -->
                 <div class="mb-3" style="margin-top: 25px;">
-                    <button type="submit" class="btn btn-success btn-block" id="reg" onclick="">비밀번호 찾기</button>
+                    <button type="submit" class="btn btn-success btn-block" id="reg" onclick="">비밀번호 변경</button>
                 </div>
             </form>
-
             <div class="mb-3" style="font-size: 11px; ">
                 <ul style="float: right; list-style-type: none;">
                     <li style="float: left;">
-                        <a href="/login" class="text-center">로그인</a>
-                    </li>
-                    <!-- <li style="float: left;">
                         <a href="/forgot_id" class="text-center">아이디 분실</a>
-                    </li> -->
+                    </li>
+                    <li style="float: left;">
+                        <a href="/register" class="text-center">회원가입</a>
+                    </li>
                 </ul>
             </div>
         </div>
         <!-- /.login-card-body -->
     </div>
 </div>
-<div class="modal" id="schoolSerch" tabindex="-1">
-<div class="modal-dialog">
-    <div class="modal-content">
-    <div class="modal-header">
-        <h5 class="modal-title">학교 검색</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-    </div>
-    <div class="modal-body">
-        <p>Modal body text goes here.</p>
-    </div>
-    <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
-        <button type="button" class="btn btn-primary">완료</button>
-    </div>
-    </div>
-</div>
-</div>
 <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="/js/duplicate.js"></script>
+<script>
+    $(document).ready(function() {
+        $("#upw2").on("focusout", function (e) {
+            if ($("#upw").val() != $("#upw2").val()) {
+                $("#lUpw").attr("hidden", false)
+                $("#reg").attr("type", "button");
+            } else {
+                $("#lUpw").attr("hidden", true)
+                $("#reg").attr("type", "submit");
+            }
+        })
+    })
+</script>
 </body>
 </html>
