--- a/views/members/login.html
+++ b/views/members/login.html
@@ -20,12 +20,14 @@
         <div class="card-body login-card-body">
             <form action="/session_login" method="post">
                 <div class="input-group mb-3">
-                    <input type="text" id="uid" name="uid" class="form-control" placeholder="아이디">
+                    <input type="text" id="uid" name="uid" class="form-control" placeholder="아이디" pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{6,15}$" 
+                    title="영숫자 조합으로&#13;6에서 15자리까지만 입력가능합니다." required oninvalid="this.setCustomValidity('아이디를 입력하세요.')" oninput="this.setCustomValidity('')">
                     <div class="input-group-append">
                     </div>
                 </div>
                 <div class="input-group mb-3">
-                    <input type="password" id="upw" name="upw" class="form-control" placeholder="비밀번호">
+                    <input type="password" id="upw" name="upw" class="form-control" placeholder="비밀번호" title="영숫자 조합으로&#13;6에서 15자리까지만 입력가능합니다." 
+                     required oninvalid="this.setCustomValidity('비밀번호를 확인하세요.')" oninput="this.setCustomValidity('')">
                     <div class="input-group-append">
                         <!-- <div class="input-group-text">
                             <span class="fas fa-lock"></span>
