--- a/views/members/register.html
+++ b/views/members/register.html
@@ -8,19 +8,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="/style/member.css">
-    <style>
-        .mb-3 {
-            margin: 0 0 1.2rem !important;
-        }
-        label {
-            margin-top: 5px;
-            padding-left: 0.5rem;
-        }
-        .login-page {
-            min-height: 870px;
-            min-width: 372px;
-        }
-    </style>
 </head>
 
 <body class="login-page">
@@ -31,36 +18,34 @@
     <!-- /.login-logo -->
     <div class="card" style="box-shadow: none">
         <div class="card-body login-card-body">
-            <form action="/register" name="userRegister" method="post">
-
+            <form class="form" action="/register" name="userRegister" method="post">
                 <div class="mb-3">
                     <div class="input-group">
-                        <select id="level" name="level" class="form-select">
-                            <option value="" selected>선택하세요</option>
+                        <select id="level" name="level" class="form-select" required oninvalid="this.setCustomValidity('목록중 하나를 선택하세요.')" oninput="this.setCustomValidity('')"> 
+                            <option selected disabled value="" selected>선택하세요</option>
                             <option value="0">학생</option>
                             <option value="1">교사</option>
                         </select>
                     </div>
-                    <label id="lLevel" style="color: red;" hidden>선택하세요.</label>
                 </div>
                 <div class="mb-3">
                     <div class="input-group">
-                        <input type="text" name="school" id="school" class="form-control" placeholder="학교명">
+                        <input type="text" name="school" id="school" class="form-control" placeholder="학교명" required oninvalid="this.setCustomValidity('학교명을 입력하세요.')" oninput="this.setCustomValidity('')">
                         <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#schoolSerch">검색</button>
                     </div>
-                    <label id="lSchool" style="color: red;" hidden>학교명을 입력하세요.</label>
                 </div>
                 <div class="mb-3">
                     <div class="input-group">
-                        <input type="text" name="name" id="uname" class="form-control" placeholder="이름">
+                        <input type="text" name="name" id="uname" class="form-control" placeholder="이름" title="한글 또는 영문으로&#13;2에서 10자리까지만 입력가능합니다." 
+                        pattern="^[가-힣]{2,5}|[a-zA-Z]{2,10}" required oninvalid="this.setCustomValidity('이름을 입력하세요.')" oninput="this.setCustomValidity('')">
                         <div class="input-group-append">
                         </div>
                     </div>
-                    <label id="lUname" style="color: red;" hidden>이름을 입력하세요.</label>
                 </div>
                 <div class="mb-3">
                     <div class="input-group">
-                        <input type="text" name="grade" id="grade" class="form-control" placeholder="학년" pattern="[0-9]{1}" title="1에서 9까지 숫자만 입력가능합니다.">
+                        <input type="text" name="grade" id="grade" class="form-control" placeholder="학년" 
+                        pattern="^[0-9]+$" title="숫자만 입력가능합니다." required oninvalid="this.setCustomValidity('학년을 입력하세요.')" oninput="this.setCustomValidity('')">
                         <div class="input-group-append">
                         </div>
                     </div>
@@ -68,7 +53,8 @@
                 </div>
                 <div class="mb-3">
                     <div class="input-group">
-                        <input type="text" name="class" id="class" class="form-control" placeholder="반" pattern="[0-9]{1,2}" title="1에서 99까지 숫자만 입력가능합니다.">
+                        <input type="text" name="class" id="class" class="form-control" placeholder="반" 
+                        pattern="^[0-9]+$" title="숫자만 입력가능합니다." required oninvalid="this.setCustomValidity('반을 입력하세요.')" oninput="this.setCustomValidity('')">
                         <div class="input-group-append">
                         </div>
                     </div>
@@ -76,7 +62,8 @@
                 </div>
                 <div class="mb-3">
                     <div class="input-group">
-                        <input type="text" name="number" id="number" class="form-control" placeholder="번호" pattern="[0-9]{1,2}" title="1에서 99까지 숫자만 입력가능합니다.">
+                        <input type="text" name="number" id="number" class="form-control" placeholder="번호" 
+                        pattern="^[0-9]+$" title="숫자만 입력가능합니다." required oninvalid="this.setCustomValidity('번호를 입력하세요.')" oninput="this.setCustomValidity('')">
                         <div class="input-group-append">
                         </div>
                     </div>
@@ -84,20 +71,21 @@
                 </div>
                 <div class="mb-3">
                     <div class="input-group">
-                        <input type="text" name="id" id="uid" class="form-control" placeholder="아이디" pattern=".{6,12}" title="6에서 12자리까지만 입력가능합니다.">
+                        <input type="text" name="id" id="uid" class="form-control" placeholder="아이디" pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{6,15}$" 
+                        title="영숫자 조합으로&#13;6에서 15자리까지만 입력가능합니다." required oninvalid="this.setCustomValidity('아이디를 입력하세요.')" oninput="this.setCustomValidity('')">
                         <div class="input-group-append">
                         </div>
                     </div>
-                    <label id="lUid" style="color: red;" hidden>아이디를 입력하세요.</label>
+                    <label id="lUid" style="color: red;" hidden>사용할 수 없는 아이디입니다.</label>
                 </div>
 
                 <div class="mb-3">
                     <div class="input-group">
-                        <input type="password" name="pw" id="upw" class="form-control" placeholder="비밀번호">
+                        <input type="password" name="pw" id="upw" class="form-control" placeholder="비밀번호" title="영숫자 조합으로&#13;6에서 15자리까지만 입력가능합니다." 
+                        pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{6,15}$" required oninvalid="this.setCustomValidity('비밀번호를 입력하세요.')" oninput="this.setCustomValidity('')">
                         <div class="input-group-append">
                         </div>
                     </div>
-                    <label id="lUpw" style="color: red;" hidden>비밀번호를 입력하세요.</label>
                 </div>
 
                 <!-- /.col -->
