--- a/views/members/change_pw.html
+++ b/views/members/change_pw.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +12,7 @@
 
 <body class="login-page">
 <div class="login-logo">
-    <b>비밀번호 변경</b>
+    <a href="/"><img src="imgs/aqufarm.png" style="height: 60px; padding: 0.5rem;"></a>
 </div>
 <div class="login-box">
     <!-- /.login-logo -->
