--- a/views/members/forgot_pw.html
+++ b/views/members/forgot_pw.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="/style/member.css">
 </head>
 
-<body class="login-page">
+<body class="login-page" style="min-height: 496.781px;">
 <div class="login-logo">
-    <b>비밀번호 찾기</b>
+    <a href="/"><img src="imgs/aqufarm.png" style="height: 60px; padding: 0.5rem;"></a>
 </div>
 <div class="login-box">
     <!-- /.login-logo -->
