--- a/public/style/sidebar.css
+++ b/public/style/sidebar.css
@@ -146,6 +146,20 @@ a {
 .height-100 {
     height: 100vh
 }
+.usericon {
+    border-radius: 50%; 
+    background-color: ivory; 
+    width: 35px;
+    height: 35px; 
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    font-weight: bold;
+    font-size: 21px;
+}
+.navbar-nav {
+    align-items: center;
+}
 
 @media screen and (min-width: 768px) {
     body {
@@ -178,6 +192,17 @@ a {
 
     .body-pd {
         padding-left: calc(var(--nav-width) + 168px)
+    }
+    .usericon {
+        border-radius: 50%; 
+        background-color: ivory; 
+        width: 45px;
+        height: 45px; 
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: bold;
+        font-size: 22px;
     }
 }
 .bg-light {
