--- a/views/members/register.html
+++ b/views/members/register.html
@@ -12,7 +12,7 @@
 
 <body class="login-page">
 <div class="login-logo">
-    <b>아쿠팜</b>
+    <a href="/"><img src="imgs/aqufarm.png" style="height: 60px; padding: 0.5rem;"></a>
 </div>
 <div class="login-box">
     <!-- /.login-logo -->
