--- a/views/student_manage.html
+++ b/views/student_manage.html
@@ -101,14 +101,14 @@
                             </div>
                             <div class="card-body">
                                 <div class="row">
-                                    <div style="padding-bottom: 0.5rem;" class="col-sm-6 col-lg-4">
+                                    <div style="padding-bottom: 0.5rem;" hidden>
                                         <div class="input-group flex-nowrap">
                                             <span class="input-group-text">학교</span>
                                             <input type="text" id="school" name="school" class="form-control" maxlength="45">
                                             <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#schoolSerch" aria-controls="home" aria-selected="true">검색</button>
                                         </div>
                                     </div>
-                                    <div style="padding-bottom: 0.5rem;" class="col-sm-6 col-lg-3">
+                                    <div style="padding-bottom: 0.5rem;" class="col-sm-12 col-md-5 col-lg-6">
                                         <div class="input-group flex-nowrap">
                                             <span class="input-group-text">이름</span>
                                             <input type="text" id="name" name="name" class="form-control" maxlength="45">
@@ -119,13 +119,13 @@
                                             </select>
                                         </div>
                                     </div>
-                                    <div style="padding-bottom: 0.5rem;" class="col-sm-6 col-lg-4">
+                                    <div style="padding-bottom: 0.5rem;" class="col-sm-12 col-md-5  col-lg-5">
                                         <div class="input-group flex-nowrap">
                                             <span class="input-group-text">가입일</span>
                                                 <input type="text" name="stdate" id="stdate" class ="form-control" autocomplete="off">
                                         </div>
                                     </div>
-                                    <div class="d-grid col-sm-6 col-lg-1" style="padding-bottom: 0.5rem;">
+                                    <div class="d-grid col-sm-12 col-md-2 col-lg-1" style="padding-bottom: 0.5rem;">
                                         <button id="upload_button" onclick="search()" class="btn btn-primary waves-effect waves-light" style="float:right; min-width: 58.75px;">검색</button>
                                     </div>
                                 </div>
