--- a/views/student_manage.html
+++ b/views/student_manage.html
@@ -64,10 +64,10 @@
                         <i class='bx bx-bar-chart-alt-2 nav_icon'></i>
                         <span class="nav_name">차트</span>
                     </a>
-                    <a href="/student_manage" class="nav_link" id="stumanag">
+                    <a href="/student_manage" class="nav_link active" id="stumanag">
                         <i class='bx bx-user nav_icon'></i> <span class="nav_name">학생관리</span>
                     </a>
-                    <a href="/admin" class="nav_link active" id="settings">
+                    <a href="/admin" class="nav_link" id="settings">
                         <i class='bx bx-cog nav_icon'></i>
                         <span class="nav_name">설정</span>
                     </a>
@@ -296,8 +296,11 @@
                 url: "/searchTable",
                 method: "post",
                 data: {
-                    school: $("#school").val(),
-                    level: $("#level").val(),
+                    school: member[0].school,
+                    level: 0,
+                    userLevel: member[0].level,
+                    grade: member[0].grade,
+                    class: member[0].class,
                     name: $("#name").val(),
                     start: $("#stdate").val().split(" - ")[0],
                     end: $("#stdate").val().split(" - ")[1],
