--- a/public/style/modify_profile.css
+++ b/public/style/modify_profile.css
@@ -17,7 +17,7 @@ a {
     display: flex;
     -ms-flex-direction: column;
     flex-direction: column;
-    height: 100vh;
+    /* height: 100vh; */
     -ms-flex-pack: center;
     justify-content: center
 }
